name:               airas
version:            0.1.0.0
synopsis:           Initial project template from stack
description:        Please see README.md
homepage:           http://github.com/kinoru/airas
license:            AGPL-3
license-file:       LICENSE
author:             kinoru
maintainer:         xkinoru@gmail.com
copyright:          AGPL-3
category:           Web
build-type:         Simple
-- extra-source-files:
cabal-version:       >=1.10

library
    hs-source-dirs:     src
    exposed-modules:    Lib
    extensions:
        OverloadedStrings
    build-depends:
        http-types,
        wai,
        warp,
        base >= 4.7 && < 5
    default-language:    Haskell2010

executable airas
    extensions:
        OverloadedStrings
    hs-source-dirs:     app
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        airas,
        base >= 4.7 && < 5
    default-language:   Haskell2010

test-suite airas-test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    build-depends:      airas
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    default-language:   Haskell2010

source-repository head
    type:               git
    location:           https://github.com/kinoru/airas
